create logical and design profile-page

--- a/src/html/includes/main/autorisation-page.html
+++ b/src/html/includes/main/autorisation-page.html
@@ -20,6 +20,9 @@
             <div class="autorisation__message-main"></div>
         </div>
         <div class="autorisation__div-a-autorisation">
+            <a class="autorisation__a-autorisation" href="forgot.html">Forgot your password?</a>
+        </div>
+        <div class="autorisation__div-a-autorisation">
             <a class="autorisation__a-autorisation" href="register.html">If you don't have a profile yet, go to the registration page.</a>
         </div>
         <div class="autorisation__div-button autorisation__div-button-log-in">
