--- a/src/html/includes/main/registration-page.html
+++ b/src/html/includes/main/registration-page.html
@@ -28,6 +28,9 @@
     <div class="registration__div-relative">
         <div class="registration__message registration__message-password"></div>
     </div>
+    <div class="registration__div-a-autorisation">
+        <a class="registration__a-autorisation" href="autorisation.html">If you already have a profile, go to the login page.</a>
+    </div>
     <div class="registration__div-button registration__div-button-sing-up">
         <a class="registration__a-button registration__a-button-set-up">Sing up</a>
     </div>
