--- a/src/scss/sections/forgot-password.scss
+++ b/src/scss/sections/forgot-password.scss
@@ -1,4 +1,4 @@
-.registration{
+.forgot{
     @include media-breakpoint-down(sm){
         width: 100%;
         padding-bottom: 50px;
@@ -30,18 +30,17 @@
             font-size: 20px;
             line-height: 23.44px;
         }
-        &__div-name, &__div-button-sing-up{
+        &__div-email, &__div-new-password, &__div-button-config, &__div-button-save{
             margin-top: var(--margin-top-40);
         }
     }
-
     @include media-breakpoint-between(md, xl){
         width: 100%;
         padding: 30px 27px;
         &__title{
             font-size: 45px;
         }
-        &__div-name, &__div-button-sing-up{
+        &__div-email, &__div-new-password, &__div-button-config, &__div-button-save{
             margin-top: var(--margin-top-60);
         }
     }
@@ -65,7 +64,7 @@
         &__title{
             font-size: 50px;
         }
-        &__div-name, &__div-button-sing-up{
+        &__div-email, &__div-new-password, &__div-button-config, &__div-button-save{
             margin-top: var(--margin-top-75);
         }
     }
@@ -78,6 +77,7 @@
     height: auto;
     input::-moz-placeholder { color: var(--palette-secondary-text); }
     input::-webkit-input-placeholder { color: var(--palette-secondary-text); }
+
 
     &__div-a-autorisation{
         width: 100%;
@@ -95,14 +95,26 @@
             color: var(--palette-primary-dark-hover);
         }
     }
+    &__div-main-relative{
+        width: 100%;
+        position: relative;
+        height: 22px;
+    }
     &__div-relative{
         width: 100%;
         position: relative;
         height: 80px;
         margin-top: 5px;
     }
-    &__div-email, &__div-phone, &__div-password{
-        margin-top: 10px;
+    &__div-password, &__div-relative-password, &__div-button-save{
+        display: none;
+    }
+    &__message-main{
+        color: red;
+        font-size: 18px;
+        font-family: var(--typography-fontFamily);
+        line-height: 21.09px;
+        text-align: center;
     }
     &__message{
         color: red;
@@ -111,7 +123,6 @@
         line-height: 21.09px;
         width: 100%;
         //word-break: break-all;
-        position: absolute;
     }
     &__button{
         width: 25px;
@@ -142,22 +153,18 @@
         height: 3px;
         margin-top: 10px;
     }
+    &__div-email, &__div-button-config{
+        display: flex;
+    }
     &__div{
         font-size: 18px;
         font-family: var(--typography-fontFamily);
         line-height: 21.09px;
         border: 1px solid var(--palette-primary-main);
         height: 45px;
-        display: flex;
         align-items: center;
         padding-inline: 15px;
         width: 100%;
-    }
-    &__div-name:before{
-        width: 28px;
-        height: 15px;
-        padding-right: 15px;
-        content: url('../../img/form/icon-user.svg');
     }
     &__div-password:before{
         width: 15px;
@@ -178,11 +185,6 @@
         margin-top: -10px;
         content: url('../../img/form/icon-email.svg');
     }
-    &__div-phone:before{
-        width: 29px;
-        height: 23px;padding-right: 15px;
-        content: url('../../img/form/icon-tel.svg');
-    }
     &__a-button{
         width: 220px;
         height: 45px;
@@ -193,10 +195,10 @@
         width: 220px;
         height: 45px;
         background-color: var(--palette-primary-dark);
-        @extend %flex-center-G;
-        @extend %flex-center-V;
         margin-right: 0;
         margin-left: auto;
+        align-items: center;
+        justify-content: center;
     }
     &__a-button{
         color: var(--palette-primary-text);
@@ -205,11 +207,12 @@
         background-color: rgb(147, 147, 147);
         pointer-events: none;
     }
+
     &__input{
         width: 100%;
     }
 }
-.margin-registration{
+.margin-forgot{
     width: 100%;
     height: auto;
     @extend %flex-center-V;
