--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,6 +15,7 @@
 
 // //Sections
 @import "sections/header.scss";
+@import "sections/header-profile.scss";
 @import "sections/welcome.scss";
 // @import "sections/header/profile-dropdown.scss";
 // //Main page
@@ -37,6 +38,7 @@
 @import "sections/profile.scss";
 @import "sections/registration-page.scss";
 @import "sections/autorisation-page.scss";
+@import "sections/forgot-password.scss";
 // //Login page
 // @import "sections/login";
 // //Register page
