--- a/src/html/templates/profile-user.html
+++ b/src/html/templates/profile-user.html
@@ -1,6 +1,8 @@
 <% var data = { title: "Home" } %>
 <%= _.template(require('./../includes/_html-top.html').default)(data) %>
+<%= _.template(require('./../includes/header-profile.html').default)(data) %>
 <main class="main">
   <%= _.template(require('./../includes/main/profile.html').default)(data) %>
 </main>
+<%= _.template(require('./../includes/footer.html').default)(data) %>
 <%= _.template(require('./../includes/_html-bottom.html').default)(data) %>
