--- a/src/html/includes/main/tickets.html
+++ b/src/html/includes/main/tickets.html
@@ -59,20 +59,25 @@
                     <div class="booking__div booking__div-title booking__div-title-date">Date</div>
                     <input class="booking__input booking__input-date" type="date">
                 </div>
+                <div class="booking__message booking__message-date"></div>
                 <div class="booking__div-border-1 booking__div-time">
                     <div class="booking__div booking__div-title booking__div-title-time">Time</div>
                     <input class="booking__input booking__input-time" type="time">
                 </div>
             </div>
+            <div class="booking__message booking__message-time"></div>
             <div class="booking__div-border-2 booking__div booking__div-name">
                 <input class="booking__input booking__input-name" type="text" placeholder="Name">
             </div>
+            <div class="booking__message booking__message-name"></div>
             <div class="booking__div-border-2 booking__div booking__div-email">
                 <input class="booking__input booking__input-email" type="email" placeholder="E-mail">
             </div>
+            <div class="booking__message booking__message-email"></div>
             <div class="booking__div-border-2 booking__div booking__div-phone">
                 <input class="booking__input booking__input-phone" type="tel" placeholder="Phone">
             </div>
+            <div class="booking__message booking__message-phone"></div>
             <div class="booking__div-border-2 booking__div-type">
                 <div class="booking__div booking__div-title booking__div-title-type">Permanent exhibition</div>
                 <div class="booking__div booking__select"></div>
