--- a/src/html/includes/header-profile.html
+++ b/src/html/includes/header-profile.html
@@ -10,7 +10,7 @@
     <nav class="header-profile__nav">
         <div class="header-profile__nav-form">
             <form class="header-profile__form-a">
-                <a class="header-profile__a header-profile__a-order">Order history</a>
+                <!-- <a class="header-profile__a header-profile__a-order">Order history</a> -->
                 <a class="header-profile__a header-profile__a-log-out">Log out</a>
             </form>
         </div>
