--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -18,6 +18,7 @@
 @import "sections/header.scss";
 @import "sections/header-profile.scss";
 @import "sections/welcome.scss";
+@import "sections/orders.scss";
 // @import "sections/header/profile-dropdown.scss";
 // //Main page
 // @import "sections/main/main";
