--- a/src/html/templates/history_orders.html
+++ b/src/html/templates/history_orders.html
@@ -2,7 +2,7 @@
 <%= _.template(require('./../includes/_html-top.html').default)(data) %>
 <%= _.template(require('./../includes/header-profile.html').default)(data) %>
 <main class="main">
-  <%= _.template(require('./../includes/main/profile.html').default)(data) %>
+  <%= _.template(require('./../includes/main/orders.html').default)(data) %>
 </main>
 <%= _.template(require('./../includes/footer-profile.html').default)(data) %>
 <%= _.template(require('./../includes/_html-bottom.html').default)(data) %>
